--- a/desafio-projeto-designPattern-spring/pom.xml
+++ b/desafio-projeto-designPattern-spring/pom.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.3.2</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>spring-boot</groupId>
 	<artifactId>desafio-projeto</artifactId>
@@ -17,7 +18,8 @@
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud.version>2023.0.3</spring-cloud.version>
-		<openapi.version>1.5.10</openapi.version> <!-- Adicionando a propriedade para a versão do OpenAPI -->
+		<openapi.version>1.5.10</openapi.version> <!-- Adicionando a propriedade
+		para a versão do OpenAPI -->
 	</properties>
 
 	<dependencies>
@@ -51,7 +53,18 @@
 		<dependency>
 			<groupId>org.springframework.shell</groupId>
 			<artifactId>spring-shell-starter</artifactId>
-			<version>2.1.0</version> <!-- Adicione a versão para spring-shell-starter -->
+			<version>2.1.0</version> <!-- Adicione a versão para
+			spring-shell-starter -->
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>webjars-locator</artifactId>
+			<version>0.40</version> <!-- Atualize para a versão recomendada -->
+		</dependency>
+		<dependency>
+			<groupId>io.github.classgraph</groupId>
+			<artifactId>classgraph</artifactId>
+			<version>4.8.113</version> <!-- Atualize para a versão recomendada -->
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
